# jina-sagemaker

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/: release-template.ejs
examples/: sample-batch-input.csv  sample-batch-output.jsonl  sample-batch-v4-input.csv  sample-batch-v4-output.json  sample-clip-batch-input.csv  sample-clip-batch-output.json  sample-clip-inference-input.json  sample-clip-inference-output.json  sample-clip-v2-inference-input.json  sample-clip-v2-inference-output.json  sample-colbert-batch-input.csv  sample-colbert-batch-output.json  sample-colbert-inference-input.json  sample-colbert-inference-output.json  sample-colbert-reranking-batch-input.csv  sample-colbert-reranking-batch-output.json  sample-colbert-reranking-inference-input.json  sample-colbert-reranking-inference-output.json  sample-inference-code-1500m-input.json  sample-inference-code-1500m-output.json  sample-inference-code-500m-input.json  sample-inference-code-500m-output.json  sample-inference-input.json  sample-inference-output.json  sample-inference-v3-input.json  sample-inference-v3-output.json  sample-inference-v4-input.json  sample-inference-v4-output.json  sample-reader-1500m-batch-output.json  sample-reader-1500m-inference-input.json  sample-reader-1500m-inference-output.json  sample-reader-500m-batch-output.json  sample-reader-500m-inference-input.json  sample-reader-500m-inference-output.json  sample-reader-batch-input.csv  sample-reader-lm-v2-batch-output.json  sample-reader-lm-v2-inference-input.json  sample-reader-lm-v2-inference-output.json  (+7 more)
(+18 files in other folders)
